# coil

./: .gitignore  CMakeLists.txt  LONGEVITY.md  README.md  cascade.coil  compiler_sources.cmake  example.coil  language-features.md  main.cpp  test.coil  todo.md
compiler/: Token.h
compiler/Support/: Systemdesign.md
compiler/ast/: Condition.h  Node.cpp  Node.h
compiler/common/: Condition.h  Node.cpp  Node.h  Visitor.h
compiler/file_handler/: File_handler.cpp  File_handler.h
compiler/frontend/: AstVisitor.cpp  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  ParsingPrecedence.cpp  PrintVisitor.cpp  PrintVisitor.h  lexer.h
compiler/io/: FileHandler.h  (+1 more)
test/: CMakeLists.txt  README.md  run_tests.sh  test_runner.cpp
test/.build/: test_runner
test/backend/: alloc_tests.cpp  asm_cli_smoke.cpp  codegen_tests.cpp
test/integration/: bad_program.coil  bad_program.expect  good_program.coil  ir_print.coil
test/ir/: ir_cli_smoke.cpp  ir_generator_smoke.cpp  ir_printer_tests.cpp  tac_tests.cpp
test/lexer/: comments.coil  comments_after_operator.coil  comments_after_operator.expect  comments_eof.coil  comments_eof.expect  comments_inline.coil  keywords.coil  keywords.expect  literals.coil  literals.expect  operators.coil  operators.expect  unterminated_string.expect
test/parser/: auto_match_expression.coil  auto_match_expression.expect  cascade.coil  cascade.expect  class_and_ctor.expect  foreach_sugar.coil  foreach_sugar.expect  foreach_sugar_auto.coil  foreach_sugar_named.coil  foreach_sugar_named.expect  foreach_sugar_with_body.coil  foreach_sugar_with_body.expect  match_expression.coil  match_expression.expect  match_with_bodies.coil  match_with_bodies.expect  pipeline.coil  pipeline.expect  simple_fn.expect  unclosed_call.coil  unclosed_call.expect
test/semantic/: assignment_immutable.coil  assignment_immutable.expect  assignment_missing_target.expect  auto_initializer_required.expect  auto_int_inference.coil  auto_type_mismatch.coil  block_scope_leak.coil  block_scope_leak.expect  cascade_member_ok.coil  cascade_member_type_mismatch.coil  cascade_missing_member.coil  cascade_missing_member.expect  cascade_type_mismatch.coil  cascade_type_mismatch.expect  compound_assignment_float.coil  compound_assignment_match_arm.coil  compound_assignment_member.coil  compound_assignment_member_float.coil  compound_assignment_non_numeric.coil  compound_assignment_non_numeric.expect  compound_assignment_numeric.coil  compound_assignment_private_member.coil  compound_assignment_private_member.expect  compound_assignment_scope.coil  constructor_arg_promotion.coil  constructor_arg_promotion.expect  constructor_arg_promotion_class_fail.coil  constructor_arg_promotion_class_fail.expect  constructor_arg_promotion_float.coil  constructor_arg_promotion_float_widen.coil  constructor_class_match.coil  constructor_name_mismatch.coil  constructor_name_mismatch.expect  duplicate_class.coil  duplicate_class.expect  duplicate_variable.coil  duplicate_variable.expect  elseif_bool_condition.coil  elseif_string_compare_condition.coil  elseif_string_compare_condition.expect  (+51 more)
(+41 files in other folders)
